--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
         android:label="baro"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCrVhdSpOdYKay1xP_kMUvlfqIGkUWgGkM"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
