--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_maps_flutter: ^2.4.0
   http: ^1.1.0
   json_serializable: ^6.7.1
+  sliding_up_panel: ^2.0.0+1
+  syncfusion_flutter_datepicker: ^22.2.5
 
 dev_dependencies:
   flutter_test:
